--- a/css/lovestyle.css
+++ b/css/lovestyle.css
@@ -19,8 +19,9 @@ body {
 #infront {
 	      position: absolute;
 	      background-color:white; 
-		  width: auto;
-		  margin: 0 auto;
+		  width: 100%;
+	          height:100%;
+                  margin: 0 auto;
 		  text-align: center;
 		  z-index: 1;
 }
