--- a/css/lovestyle.css
+++ b/css/lovestyle.css
@@ -30,7 +30,8 @@ body {
 
 	position: absolute;
 	background-color:white; 
-	width: auto;
+	width: 100%;
+	height: 100%;
 	margin: 0 auto;
 	text-align: center;
 	
@@ -40,7 +41,8 @@ body {
 
 	position: absolute;
 	background-color:white; 
-	width: auto;
+	width: 100%;
+	height: 100%;
 	margin: 0 auto;
 	text-align: center;
 	
@@ -50,7 +52,8 @@ body {
 
 	position: absolute;
 	background-color:white; 
-	width: auto;
+	width: 100%;
+        height: 100%;
 	margin: 0 auto;
 	text-align: center;
 	
