--- a/css/lovestyle.css
+++ b/css/lovestyle.css
@@ -28,6 +28,8 @@ body {
 
 #end{
         background-image: url("img/69.jpg");
+	background-repeat:no-repeat;
+	background-size: cover;
 	position: absolute;
 	background-color:white; 
 	width: 100%;
@@ -39,6 +41,8 @@ body {
 
 #good{
         background-image: url("img/96.jpg");
+	background-repeat:no-repeat;
+	background-size: cover;
 	position: absolute;
 	background-color:white; 
 	width: 100%;
@@ -50,6 +54,8 @@ body {
 
 #bad{
         background-image: url("img/23.jpg");
+	background-repeat:no-repeat;
+	background-size: cover;
 	position: absolute;
 	background-color:white; 
 	width: 100%;
