--- a/css/lovestyle.css
+++ b/css/lovestyle.css
@@ -27,39 +27,33 @@ body {
 }
 
 #end{
-        background-image: url("img/69.jpg");
-	background-repeat:no-repeat;
-	background-size: cover;
+        
 	position: absolute;
 	background-color:white; 
-	width: 100%;
-	height: 100%;
+	width: auto;
+	height: auto;
 	margin: 0 auto;
 	text-align: center;
 	
 }
 
 #good{
-        background-image: url("img/96.jpg");
-	background-repeat:no-repeat;
-	background-size: cover;
+        
 	position: absolute;
 	background-color:white; 
-	width: 100%;
-	height: 100%;
+	width: auto;
+	height: auto;
 	margin: 0 auto;
 	text-align: center;
 	
 }
 
 #bad{
-        background-image: url("img/23.jpg");
-	background-repeat:no-repeat;
-	background-size: cover;
+        
 	position: absolute;
 	background-color:white; 
-	width: 100%;
-        height: 100%;
+	width: auto;
+        height: auto;
 	margin: 0 auto;
 	text-align: center;
 	
