--- a/css/lovestyle.css
+++ b/css/lovestyle.css
@@ -30,10 +30,11 @@ body {
         
 	position: absolute;
 	background-color:white; 
-	width: auto;
-	height: auto;
-	margin: 0 auto;
-	text-align: center;
+	width: 100%;
+	          height:100%;
+                  margin: 0 auto;
+		  text-align: center;
+		  z-index: 1;
 	
 }
 
@@ -41,10 +42,11 @@ body {
         
 	position: absolute;
 	background-color:white; 
-	width: auto;
-	height: auto;
-	margin: 0 auto;
-	text-align: center;
+	width: 100%;
+	          height:100%;
+                  margin: 0 auto;
+		  text-align: center;
+		  z-index: 1;
 	
 }
 
@@ -52,10 +54,11 @@ body {
         
 	position: absolute;
 	background-color:white; 
-	width: auto;
-        height: auto;
-	margin: 0 auto;
-	text-align: center;
+	width: 100%;
+	          height:100%;
+                  margin: 0 auto;
+		  text-align: center;
+		  z-index: 1;
 	
 }
 
